2004-03-17  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* config/tc-sh.c: Include dw2gencfi.h.
	(sh_cfi_frame_initial_instructions): New function.
	(sh_regname_to_dw2regnum): Likewise.
	* config/tc-sh.h (DWARF2_LINE_MIN_INSN_LENGTH): Move to the end of
	file.
	(TARGET_USE_CFIPOP): Define.
	(tc_cfi_frame_initial_instructions): Likewise.
	(tc_regname_to_dw2regnum): Likewise.
	(DWARF2_DEFAULT_RETURN_COLUMN, DWARF2_CIE_DATA_ALIGNMENT): Likewise.
	* Makefile.am: Update dependencies.
	* Makefile.in: Regenerate.

2004-03-17  Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.in: Switch sh-*-rtems* to ELF.  Add sh-*-rtemscoff*.
	* configure: Regenerate.

2004-03-12  Bob Wilson  <bob.wilson@acm.org>

	* read.c (s_leb128): Call md_flush_pending_output.

2004-03-12  Michal Ludvig  <mludvig@suse.cz>

	* config/tc-i386.c (output_insn): Handle PadLock instructions.
	* config/tc-i386.h (CpuPadLock): New define.
	(CpuUnknownFlags): Added CpuPadLock.

2004-02-26  Eric Christopher  <echristo@redhat.com>

	* config/tc-mips.c (mips_dwarf2_addr_size): New.
	* config/tc-mips.h (DWARF2_ADDR_SIZE): Use.

2004-02-17  Petko Manolov  <petkan@nucleusys.com>

	* config/tc-arm.c (do_mav_dspsc_1): Correct offset of CRn.
	(do_mav_dspsc_2): Likewise.
	Fix accumulator registers move opcodes.

2004-02-13  Hannes Reinecke  <hare@suse.de>
            Jakub Jelinek  <jakub@redhat.com>

	* dwarf2dbg.c (get_filenum): Do not read beyond allocated memory.

2004-02-10  Steve Ellcey  <sje@cup.hp.com>

	* config/tc-ia64.h (ia64_frob_symbol): New declaration.
	(tc_frob_symbol): New macro definition.
	* config/tc-ia64.c (ia64_frob_symbol): New routine.

2004-02-09  Daniel Jacobowitz  <drow@mvista.com>

	* config/tc-arm.c (md_begin): Mark .note.gnu.arm.ident as
	read-only.

2004-02-09  Nathan Sidwell  <nathan@codesourcery.com>

	* read.h (IGNORE_OPCODE_CASE): Do not define. Replace with ...
	(TC_CASE_SENSITIVE): ... this.
	* read.c: Replace IGNORE_OPCODE_CASE with TC_CASE_SENSITIVE.